# edgetech-filesaver

./: CONTRIBUTING.md  Dockerfile  FilesaverSub.py  LICENSE  README.md  docker-compose.yml  example.env
.github/workflows/: dockerbuild.yml  releasetag.yml
filesaver/: Dockerfile  file_saver_pub_sub.py  pyproject.toml
